--- a/src/main/resources/static/web/css/register.css
+++ b/src/main/resources/static/web/css/register.css
@@ -378,7 +378,7 @@ h6 span{
   text-transform: uppercase;
   -webkit-transition : all 200ms linear;
   transition: all 200ms linear;
-  padding: 0 30px;
+  /* padding: 0 30px; */
   letter-spacing: 1px;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
