--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -14,8 +14,6 @@ html{
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
 
-
-
 /* Body */
 body{
     background-color: #0F292F;
@@ -46,13 +44,14 @@ header{
     flex-direction: column;
     align-items: center;
     position: fixed;
+    height: 100vh;
 }
 
 .nav div{
     padding:0.5rem ;
     width: 4rem;
     transition-duration: 0.5s;
-    margin-bottom: 0.6rem;
+    margin-bottom: 0.3rem;
 }
 
 
@@ -121,6 +120,11 @@ p{
     color: #CCCCCC;
 }
 
+.section-products{
+    width: 92%;
+    margin-left: 8%;
+}
+
 #pizzas{
     width: 92%;
     display: flex;
@@ -150,6 +154,9 @@ p{
     background-color: black;
 }
 
+.modal{
+    z-index: 100;
+}
 
 
 /* SECCION PRODUCTOS */
