--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -82,7 +82,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 .cf:before,
