--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -20,7 +20,7 @@ body{
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='600' y1='25' x2='600' y2='777'%3E%3Cstop offset='0' stop-color='%230F292F'/%3E%3Cstop offset='1' stop-color='%23501F3A'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='650' y1='25' x2='650' y2='777'%3E%3Cstop offset='0' stop-color='%230d2a34'/%3E%3Cstop offset='1' stop-color='%235a2140'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='700' y1='25' x2='700' y2='777'%3E%3Cstop offset='0' stop-color='%230c2b38'/%3E%3Cstop offset='1' stop-color='%23652345'/%3E%3C/linearGradient%3E%3ClinearGradient id='d' gradientUnits='userSpaceOnUse' x1='750' y1='25' x2='750' y2='777'%3E%3Cstop offset='0' stop-color='%230f2b3d'/%3E%3Cstop offset='1' stop-color='%236f254b'/%3E%3C/linearGradient%3E%3ClinearGradient id='e' gradientUnits='userSpaceOnUse' x1='800' y1='25' x2='800' y2='777'%3E%3Cstop offset='0' stop-color='%23142b41'/%3E%3Cstop offset='1' stop-color='%237a2650'/%3E%3C/linearGradient%3E%3ClinearGradient id='f' gradientUnits='userSpaceOnUse' x1='850' y1='25' x2='850' y2='777'%3E%3Cstop offset='0' stop-color='%231c2a44'/%3E%3Cstop offset='1' stop-color='%23852855'/%3E%3C/linearGradient%3E%3ClinearGradient id='g' gradientUnits='userSpaceOnUse' x1='900' y1='25' x2='900' y2='777'%3E%3Cstop offset='0' stop-color='%23252946'/%3E%3Cstop offset='1' stop-color='%2390295a'/%3E%3C/linearGradient%3E%3ClinearGradient id='h' gradientUnits='userSpaceOnUse' x1='950' y1='25' x2='950' y2='777'%3E%3Cstop offset='0' stop-color='%232e2846'/%3E%3Cstop offset='1' stop-color='%239c2a5e'/%3E%3C/linearGradient%3E%3ClinearGradient id='i' gradientUnits='userSpaceOnUse' x1='1000' y1='25' x2='1000' y2='777'%3E%3Cstop offset='0' stop-color='%23372646'/%3E%3Cstop offset='1' stop-color='%23a72b63'/%3E%3C/linearGradient%3E%3ClinearGradient id='j' gradientUnits='userSpaceOnUse' x1='1050' y1='25' x2='1050' y2='777'%3E%3Cstop offset='0' stop-color='%23402443'/%3E%3Cstop offset='1' stop-color='%23b32c67'/%3E%3C/linearGradient%3E%3ClinearGradient id='k' gradientUnits='userSpaceOnUse' x1='1100' y1='25' x2='1100' y2='777'%3E%3Cstop offset='0' stop-color='%2349213f'/%3E%3Cstop offset='1' stop-color='%23bf2c6b'/%3E%3C/linearGradient%3E%3ClinearGradient id='l' gradientUnits='userSpaceOnUse' x1='1150' y1='25' x2='1150' y2='777'%3E%3Cstop offset='0' stop-color='%23501F3A'/%3E%3Cstop offset='1' stop-color='%23CB2D6F'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill-opacity='0.12'%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' x='100' width='1100' height='800'/%3E%3Crect fill='url(%23c)' x='200' width='1000' height='800'/%3E%3Crect fill='url(%23d)' x='300' width='900' height='800'/%3E%3Crect fill='url(%23e)' x='400' width='800' height='800'/%3E%3Crect fill='url(%23f)' x='500' width='700' height='800'/%3E%3Crect fill='url(%23g)' x='600' width='600' height='800'/%3E%3Crect fill='url(%23h)' x='700' width='500' height='800'/%3E%3Crect fill='url(%23i)' x='800' width='400' height='800'/%3E%3Crect fill='url(%23j)' x='900' width='300' height='800'/%3E%3Crect fill='url(%23k)' x='1000' width='200' height='800'/%3E%3Crect fill='url(%23l)' x='1100' width='100' height='800'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: #CCCCCC;
 }
 
@@ -44,7 +44,7 @@ header{
     flex-direction: column;
     align-items: center;
     position: fixed;
-    height: 100vh;
+    height: 100%;
 }
 
 .nav div{
@@ -67,7 +67,7 @@ header{
 }
 
 .center{
-    width: 110%; /* REVISAR */
+    width: 100%; /* REVISAR */
 }
 
 
@@ -99,22 +99,24 @@ header{
   
   
   
-  
-  
+
 
 img{
     width: 92%;
     margin-left: 8%
 }
 
+
 .center img{
     background-size: cover;
+    height: 100vh;
 }
 
 p{
     text-align: center;
     color: black;
 }
+
 
 .section-products p{
     color: #CCCCCC;
@@ -123,6 +125,7 @@ p{
 .section-products{
     width: 92%;
     margin-left: 8%;
+    padding-bottom: 0;
 }
 
 #pizzas{
@@ -135,9 +138,13 @@ p{
 
 #pizzas img{
     padding: 0.5rem;
-    margin-left: 1rem;
+    margin-left: 3%;
     width: 5rem;
 }
+
+#pizzas div:hover{
+    size:10px ;
+  }
 
 .contenedorDeVariedades{
     justify-content: space-around;
@@ -154,18 +161,18 @@ p{
     background-color: black;
 }
 
-.modal{
-    z-index: 100;
+.modal-backdrop{
+    position: relative
 }
 
 
 /* SECCION PRODUCTOS */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap'); */
 
-body {
+/* body {
     font-family: "Poppins", sans-serif;
     color: #CCCCCC;
-}
+} */
 
 a,
 a:hover {
@@ -179,6 +186,8 @@ a:hover {
 
 .section-products .header {
     margin-bottom: 50px;
+    background-color: #12A098;
+    width: 100%;
 }
 
 /*PALETA DE COLORES
@@ -375,6 +384,213 @@ a:hover {
     transform: translateY(-50%);
 }
 
-.container{
-    margin-right: 4%;
+/*PALETA DE COLORES
+#501F3A       BORDO
+#CB2D6F       ROSA
+#CCCCCC       BLANCO     
+#12A098       VERDE CLARO     
+#0F292F       VERDE OSCURO*/
+
+/* DIVISORES */
+.divisor{
+    width: 88%;
+    height: 10%;
+    margin-left: 10%;
+    padding-top: 1rem;
+    border-radius: 10px;
+    padding-bottom: 1%;
 }
+
+.tipoDeComida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: #CCCCCC;
+    font-family:cursive;
+    /* border-right: 1px solid #CCCCCC; */
+    padding-right: 1%;
+    
+}
+
+.tipoDeComida img{
+    width: auto;
+    height: 15vh;
+    margin: 0;
+}
+
+.tipoDeComida h3{
+    width: min-content;
+    height: min-content;
+    margin-bottom: 0;
+    font-weight: 100;
+    color: #CCCCCC;
+    background-color: #12a099b9;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family:fantasy ;
+}
+
+#divisorBurgers{
+    width: 100%;
+    height: 15vh;
+    background-image: url(https://us.123rf.com/450wm/kbolbik/kbolbik2010/kbolbik201000595/157596716-patr%C3%B3n-transparente-de-vector-de-hamburguesas-de-contorno-negro-fondo-para-banner-embalaje-men%C3%BA-.jpg?ver=6);
+    background-size: auto;
+}
+
+#divisorBurgers2{
+    width: 100%;
+    height: 15vh;
+    background-image: url();
+    background-size: auto;
+}
+
+#divisorBurgers img{
+    width: 100%;
+    height: 100%;
+}
+
+#divisorBurgers div{
+    width: 10%;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+/* VIDEO */
+/* Cerveza */
+#video {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 15vh;
+    object-fit: cover;
+}
+
+/* Video Principal */
+#video2 {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+
+
+/* RESPONSIVE*/
+@media screen and (max-width: 1000px){
+
+  header{
+    flex-direction: column;
+  }  
+
+  .nav{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 10vh;
+    justify-content: space-around;
+    z-index: 10;
+  }
+
+  #marca{
+    width: 4.5rem;
+    padding: 0;
+    margin-bottom: 1.5rem;
+    padding: 0.3rem;
+  }
+
+  img{
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .center img{
+    height: 100%;
+  }
+
+  #pizzas{
+    width: 100%;
+    margin: 0%;
+    flex-wrap: wrap;
+  }
+
+  .nav div{
+    width: 3.5rem;
+  }
+
+  #pizzas img{
+    width: 4rem;
+    margin-left: 5%;
+  }
+
+  .section-products{
+    width: 100%;
+    margin-left: 0;
+  }
+
+}
+
+/* MENU HAMBURGUESA */
+
+/* #pushed{
+    color: #12A098;
+    font-weight: bold;
+    background-color: #12A098;
+    padding: 5px;
+}
+
+#hamburguesitas{
+    display: flex;
+}
+
+@media(max-width: 570px){
+    
+    header{
+        height: fit-content;
+        width: 100%;
+        background-color: #12A098;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 0;
+        gap: 15px;
+        padding: 20px 0 20px 0;
+    }
+
+.nav{
+        display: none;
+    }
+    #hamburguesa{
+        display: contents;
+        color: #0F292F;
+    }
+    #navbarToggleExternalContent{
+        color: #0F292F;
+        background-color: #0F292F;
+        text-align: right;
+    }
+    #menu_hamburguesa{
+        display: contents;
+    }
+    #container_fluid{
+    height: 15vw;
+    background-color: #CCCCCC;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 5vw;
+    }
+    #boton_hamburguesa{
+    background-color: #0F292F;
+    }
+    .navbar-toggler-icon{
+    background-color: #0F292F;
+    }
+}    */
