--- a/src/main/resources/static/web/css/footer.css
+++ b/src/main/resources/static/web/css/footer.css
@@ -5,8 +5,8 @@
 #12A098       VERDE CLARO     
 #0F292F       VERDE OSCURO*/
 
-
-#contenedorInfo{
+/* FOOTER NACHO */
+/* #contenedorInfo{
     width: 92%;
     margin-left: 8%;
     display: flex;
@@ -102,7 +102,7 @@ p {
 }
 
 
-/* FOOTER */
+FOOTER
 
 footer {
     display: flex;
@@ -136,7 +136,7 @@ footer p{
 }
 
 
-/* RESPONSIVE */
+RESPONSIVE
 @media(max-width: 1000px){
 
     #contenedorInfo {
@@ -149,12 +149,12 @@ footer p{
         margin-left: 0;
         justify-content: center;
     }
-
+    
     footer{
         width: 100%;
         margin-left: 0;
     }
-
+    
     #masInformacion-contenedor div{
         display: flex;
         flex-direction: column;
@@ -162,4 +162,103 @@ footer p{
         justify-content: center;
     }
 
+} */
+/* FOOTER NACHO */
+
+
+/* FOOTER CARO */
+footer {
+    background-color: #CCCCCC;
+    color: #8f2953;
+    font-weight: 300;
+    width: 92% ;
+    margin-left: 8% ;
+}
+
+.baby-icons {
+    background-color: #8f2953;
+}
+
+.baby-icons2 {
+    background-color: #501F3A;
+}
+
+.large-icons {
+    color: #14A098;
+}
+
+#contact-title {
+    color: #8f2953;
+    font-weight: 600;
+}
+
+
+.rowF{
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+}
+
+.baby-icons-row {
+    height: 2rem;
+}
+
+a {
+    color: #CCCCCC;
+    text-decoration: none;
+}
+
+.divLogo {
+    width: 92% !important;
+    margin-left: 8% !important;
+}
+
+#logo-intermedio {
+    width: 20rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
+.contact-text {
+    color: black;
+    font-size: 1.25rem;
+    font-weight: 450;
+}
+
+.contact-subtitles{
+    font-weight: 600;
+}
+
+.info{
+    font-weight: 550;
+}
+
+.bi-twitter:hover{
+    color: #00acee;
+}
+.bi-linkedin:hover{
+    color: #0e76a8;
+}
+.bi-facebook:hover{
+    color: #3b5998;
+}
+.bi-instagram:hover{
+    color: rgb(248, 125, 183);
+}
+
+/* RESPONSIVE */
+@media(max-width: 1000px){
+
+    .containerF {
+        width: 100% !important;
+        margin-left: 0 !important;
+    }
+
+    .rowF{
+        justify-content: center;
+    }
 }
