acomodado de archivos

--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -532,10 +532,10 @@ a:hover {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.swal2-styled.swal2-confirm{
-    /* background-color: #225f6d !important;
-    color: #CCCCCC !important; */
-}
+/* .swal2-styled.swal2-confirm{
+    background-color: #225f6d !important;
+    color: #CCCCCC !important;
+} */
 
 /* VIDEO */
 /* Cerveza */
